--- a/platformio.ini
+++ b/platformio.ini
@@ -8,13 +8,17 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[env:uno_nano]
+platform = atmelavr
+board = nanoatmega328
+framework = arduino
+upload_speed = 115200
+build_src_filter = +<*> -<No_encourager.cpp>
+lib_deps = marcoschwartz/LiquidCrystal_I2C@^1.1.4
+
 [env:uno_r4_wifi]
 platform = renesas-ra
 board = uno_r4_wifi
 framework = arduino
-lib_deps = 
-	adafruit/Adafruit GFX Library @ ^1.11.5
-	adafruit/Adafruit BusIO @ ^1.14.1
-	adafruit/Adafruit LiquidCrystal@^2.0.4
-
-build_src_filter = +<*> -<No_depends.cpp>
+build_src_filter = +<*> -<No_encourager.cpp>
+lib_deps = marcoschwartz/LiquidCrystal_I2C@^1.1.4
