--- a/platformio.ini
+++ b/platformio.ini
@@ -8,11 +8,10 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:uno_nano]
+[env:nanoatmega328]
 platform = atmelavr
 board = nanoatmega328
 framework = arduino
-upload_speed = 115200
 build_src_filter = +<*> -<No_encourager.cpp>
 lib_deps = marcoschwartz/LiquidCrystal_I2C@^1.1.4
 
