Ported code to Attiny84 for ues in PCB

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,11 +13,39 @@ platform = atmelavr
 board = nanoatmega328
 framework = arduino
 build_src_filter = +<*> -<No_encourager.cpp>
-lib_deps = marcoschwartz/LiquidCrystal_I2C@^1.1.4
+lib_deps = 
+	marcoschwartz/LiquidCrystal_I2C@^1.1.4
+	duinowitchery/hd44780@^1.3.2
 
 [env:uno_r4_wifi]
 platform = renesas-ra
 board = uno_r4_wifi
 framework = arduino
 build_src_filter = +<*> -<No_encourager.cpp>
-lib_deps = marcoschwartz/LiquidCrystal_I2C@^1.1.4
+lib_deps = 
+	marcoschwartz/LiquidCrystal_I2C@^1.1.4
+	duinowitchery/hd44780@^1.3.2
+
+[env:attiny84]
+platform = atmelavr
+framework = arduino
+board = attiny84
+board_build.f_cpu = 8000000L
+upload_protocol = custom
+upload_port = COM3
+upload_speed = 19200
+upload_flags = 
+	-C
+	${platformio.packages_dir}/tool-avrdude/avrdude.conf
+	-p
+	$BOARD_MCU
+	-P
+	$UPLOAD_PORT
+	-b
+	$UPLOAD_SPEED
+	-c
+	arduino
+upload_command = avrdude $UPLOAD_FLAGS -U flash:w:$SOURCE:i
+lib_deps = 
+	marcoschwartz/LiquidCrystal_I2C@^1.1.4
+	duinowitchery/hd44780@^1.3.2
